.provarCaches/00D410000011HE0EAM/objects/rstk__icjobset__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_icjobset</customHelpPage>
    <description>icjobset__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icjobset_div__r.rstk__externalid__c + rstk__icjobset_jsid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icjobset_jsid__c &amp; &quot;(&quot; &amp; rstk__icjobset_desc__c &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_comments__c</fullName>
        <description>Comments</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_desc__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Division Master</description>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Job Set Masters</relationshipLabel>
        <relationshipName>icjobsets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Export Inventory Item</description>
        <label>Export Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Job Set Masters</relationshipLabel>
        <relationshipName>icjobsets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_icjobcode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default Job Code</description>
        <label>Default Job Code</label>
        <referenceTo>rstk__icjobcode__c</referenceTo>
        <relationshipLabel>Job Set Masters</relationshipLabel>
        <relationshipName>icjobsets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_jsid__c</fullName>
        <description>Job Set ID</description>
        <label>Job Set ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_labmarkuppct__c</fullName>
        <description>Labor Markup Pct.</description>
        <label>Labor Markup Pct.</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_labprice__c</fullName>
        <description>Labor Price per Hour</description>
        <label>Labor Price per Hour</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_lap1factor__c</fullName>
        <description>Labor – Alt Price 1 Factor</description>
        <label>Labor – Alt Price 1 Factor</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_lap2factor__c</fullName>
        <description>Labor – Alt Price 2 Factor</description>
        <label>Labor – Alt Price 2 Factor</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_machprice__c</fullName>
        <description>Machine Price per Hour</description>
        <label>Machine Price per Hour</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_map1factor__c</fullName>
        <description>Material – Alt Price 1 Factor</description>
        <label>Material – Alt Price 1 Factor</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_map2factor__c</fullName>
        <description>Material– Alt Price 2 Factor</description>
        <label>Material– Alt Price 2 Factor</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_mtlmarkuppct__c</fullName>
        <description>Material Markup Pct.</description>
        <label>Material Markup Pct.</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_oap1factor__c</fullName>
        <description>ODC – Alt Price 1 Factor</description>
        <label>ODC – Alt Price 1 Factor</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_oap2factor__c</fullName>
        <description>ODC– Alt Price 2 Factor</description>
        <label>ODC– Alt Price 2 Factor</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_pricemethlab__c</fullName>
        <description>Labor Price Method</description>
        <label>Labor Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Plus Markup Pct.</fullName>
                </value>
                <value>
                    <fullName>Price From Job Set</fullName>
                </value>
                <value>
                    <fullName>Price From Run Grade / Machine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icjobset_pricemethmtl__c</fullName>
        <description>Material Price Method</description>
        <label>Material Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Plus Markup Pct.</fullName>
                </value>
                <value>
                    <fullName>Component Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icjobset_salesdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Division</description>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Job Set Masters (Sales Division)</relationshipLabel>
        <relationshipName>icjobsets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_soprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Export Product</description>
        <label>Export Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Job Set Masters</relationshipLabel>
        <relationshipName>icjobsets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totalaltprice1__c</fullName>
        <formula>rstk__icjobset_totmtlaltprice1__c + rstk__icjobset_totlabaltprice1__c + rstk__icjobset_totodcaltprice1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Set Total Alternate Price 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totalaltprice2__c</fullName>
        <formula>rstk__icjobset_totmtlaltprice2__c + rstk__icjobset_totlabaltprice2__c + rstk__icjobset_totodcaltprice2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Set Total Alternate Price 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totcost__c</fullName>
        <formula>rstk__icjobset_totmtlcst__c + rstk__icjobset_totlabcst__c + rstk__icjobset_totodccst__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Set Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totlabaltprice1__c</fullName>
        <description>Total Labor Alternate Price 1</description>
        <label>Total Labor Alternate Price 1</label>
        <summarizedField>rstk__icjobsetoper__c.rstk__icjobsetoper_extaltprice1__c</summarizedField>
        <summaryForeignKey>rstk__icjobsetoper__c.rstk__icjobsetoper_icjobset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totlabaltprice2__c</fullName>
        <description>Total Labor Alternate Price 2</description>
        <label>Total Labor Alternate Price 2</label>
        <summarizedField>rstk__icjobsetoper__c.rstk__icjobsetoper_extaltprice2__c</summarizedField>
        <summaryForeignKey>rstk__icjobsetoper__c.rstk__icjobsetoper_icjobset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totlabcst__c</fullName>
        <description>Total Labor Cost</description>
        <label>Total Labor Cost</label>
        <summarizedField>rstk__icjobsetoper__c.rstk__icjobsetoper_extcost__c</summarizedField>
        <summaryForeignKey>rstk__icjobsetoper__c.rstk__icjobsetoper_icjobset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totlabprice__c</fullName>
        <description>Total Labor Price</description>
        <label>Total Labor Price</label>
        <summarizedField>rstk__icjobsetoper__c.rstk__icjobsetoper_extprice__c</summarizedField>
        <summaryForeignKey>rstk__icjobsetoper__c.rstk__icjobsetoper_icjobset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totmtlaltprice1__c</fullName>
        <description>Total Material Alternate Price 1</description>
        <label>Total Material Alternate Price 1</label>
        <summarizedField>rstk__icjobsetmtl__c.rstk__icjobsetmtl_extaltprice1__c</summarizedField>
        <summaryForeignKey>rstk__icjobsetmtl__c.rstk__icjobsetmtl_icjobset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totmtlaltprice2__c</fullName>
        <description>Total Material Alternate Price 2</description>
        <label>Total Material Alternate Price 2</label>
        <summarizedField>rstk__icjobsetmtl__c.rstk__icjobsetmtl_extaltprice2__c</summarizedField>
        <summaryForeignKey>rstk__icjobsetmtl__c.rstk__icjobsetmtl_icjobset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totmtlcst__c</fullName>
        <description>Total Material Cost</description>
        <label>Total Material Cost</label>
        <summarizedField>rstk__icjobsetmtl__c.rstk__icjobsetmtl_extcost__c</summarizedField>
        <summaryForeignKey>rstk__icjobsetmtl__c.rstk__icjobsetmtl_icjobset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totmtlprice__c</fullName>
        <description>Total Material Price</description>
        <label>Total Material Price</label>
        <summarizedField>rstk__icjobsetmtl__c.rstk__icjobsetmtl_extprice__c</summarizedField>
        <summaryForeignKey>rstk__icjobsetmtl__c.rstk__icjobsetmtl_icjobset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totodcaltprice1__c</fullName>
        <description>Total ODC Alternate Price 1</description>
        <label>Total ODC Alternate Price 1</label>
        <summarizedField>rstk__icjobsetodc__c.rstk__icjobsetodc_extaltprice1__c</summarizedField>
        <summaryForeignKey>rstk__icjobsetodc__c.rstk__icjobsetodc_icjobset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totodcaltprice2__c</fullName>
        <description>Total ODC Alternate Price 2</description>
        <label>Total ODC Alternate Price 2</label>
        <summarizedField>rstk__icjobsetodc__c.rstk__icjobsetodc_extaltprice2__c</summarizedField>
        <summaryForeignKey>rstk__icjobsetodc__c.rstk__icjobsetodc_icjobset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totodccst__c</fullName>
        <description>Total ODC Cost</description>
        <label>Total ODC Cost</label>
        <summarizedField>rstk__icjobsetodc__c.rstk__icjobsetodc_extcost__c</summarizedField>
        <summaryForeignKey>rstk__icjobsetodc__c.rstk__icjobsetodc_icjobset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totodcprice__c</fullName>
        <description>Total ODC CPrice</description>
        <label>Total ODC CPrice</label>
        <summarizedField>rstk__icjobsetodc__c.rstk__icjobsetodc_extprice__c</summarizedField>
        <summaryForeignKey>rstk__icjobsetodc__c.rstk__icjobsetodc_icjobset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__icjobset_totprice__c</fullName>
        <formula>rstk__icjobset_totmtlprice__c + rstk__icjobset_totlabprice__c + rstk__icjobset_totodcprice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Set Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Job Set Master</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Set Master  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Set Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Job_Set_ID_not_blank</fullName>
        <active>true</active>
        <description>Job Set ID cannot be blank</description>
        <errorConditionFormula>ISBLANK(rstk__icjobset_jsid__c)</errorConditionFormula>
        <errorMessage>Job Set ID cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Labor_Alt_Price_1_F_cannot_b_less_than_0</fullName>
        <active>true</active>
        <description>Labor – Alt Price 1 Factor cannot be less than 0</description>
        <errorConditionFormula>rstk__icjobset_lap1factor__c &lt; 0</errorConditionFormula>
        <errorMessage>Labor – Alt Price 1 Factor cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Labor_Alt_Price_2_F_cannot_b_less_than_0</fullName>
        <active>true</active>
        <description>Labor – Alt Price 2 Factor cannot be less than 0</description>
        <errorConditionFormula>rstk__icjobset_lap2factor__c &lt; 0</errorConditionFormula>
        <errorMessage>Labor – Alt Price 2 Factor cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Labor_Markup_Pct_cannot_b_less_than_0</fullName>
        <active>true</active>
        <description>Labor Markup Pct. cannot be less than 0</description>
        <errorConditionFormula>rstk__icjobset_labmarkuppct__c &lt; 0</errorConditionFormula>
        <errorMessage>Labor Markup Pct. cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Labor_Price_per_Hou_cannot_b_less_than_0</fullName>
        <active>true</active>
        <description>Labor Price per Hour cannot be less than 0</description>
        <errorConditionFormula>rstk__icjobset_labprice__c &lt; 0</errorConditionFormula>
        <errorMessage>Labor Price per Hour cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__M_Alt_Price_1_cannot_b_less_than_0</fullName>
        <active>true</active>
        <description>Material – Alt Price 1 Factor cannot be less than 0</description>
        <errorConditionFormula>rstk__icjobset_map1factor__c &lt; 0</errorConditionFormula>
        <errorMessage>Material – Alt Price 1 Factor cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__M_Alt_Price_2_cannot_b_less_than_0</fullName>
        <active>true</active>
        <description>Material – Alt Price 2 Factor cannot be less than 0</description>
        <errorConditionFormula>rstk__icjobset_map2factor__c &lt; 0</errorConditionFormula>
        <errorMessage>Material – Alt Price 2 Factor cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Machine_Price_per_H_cannot_b_less_than_0</fullName>
        <active>true</active>
        <description>Machine Price per Hour cannot be less than 0</description>
        <errorConditionFormula>rstk__icjobset_machprice__c &lt; 0</errorConditionFormula>
        <errorMessage>Machine Price per Hour cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Material_Markup_Pct_canot_b_less_than_0</fullName>
        <active>true</active>
        <description>Material Markup Pct. cannot be less than 0</description>
        <errorConditionFormula>rstk__icjobset_mtlmarkuppct__c &lt; 0</errorConditionFormula>
        <errorMessage>Material Markup Pct. cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__ODCAlt_Price_1_Fac_cannot_b_less_than_0</fullName>
        <active>true</active>
        <description>ODC – Alt Price 1 Factor cannot be less than 0</description>
        <errorConditionFormula>rstk__icjobset_oap1factor__c &lt; 0</errorConditionFormula>
        <errorMessage>ODC – Alt Price 1 Factor cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__ODCAlt_Price_2_Fac_cannot_b_less_than_0</fullName>
        <active>true</active>
        <description>ODC – Alt Price 2 Factor cannot be less than 0</description>
        <errorConditionFormula>rstk__icjobset_oap2factor__c &lt; 0</errorConditionFormula>
        <errorMessage>ODC – Alt Price 2 Factor cannot be less than 0.</errorMessage>
    </validationRules>
</CustomObject>